--- a/sample/test/FunctionalTest/FunctionalTest.csproj
+++ b/sample/test/FunctionalTest/FunctionalTest.csproj
@@ -2,15 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    
-    <PreserveCompilationContext>true</PreserveCompilationContext>
+    <RootNamespace>FunctionalTest</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\MarkopTest.csproj" />
     <ProjectReference Include="..\IntegrationTest\IntegrationTest.csproj" />
   </ItemGroup>
-  
+
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
   </ItemGroup>
