--- a/src/MarkopTest.csproj
+++ b/src/MarkopTest.csproj
@@ -12,10 +12,10 @@
         <PackageLicenseUrl>https://raw.githubusercontent.com/MarkopDev/MarkopTest/master/LICENSE</PackageLicenseUrl>
         <RepositoryUrl>https://github.com/MarkopDev/MarkopTest</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
-        <PackageTags>UnitTest, LoadTest, StressTest, IntegrationTest, xUnit, Report, HTML, Chart</PackageTags>
-        <AssemblyVersion>1.1.2</AssemblyVersion>
-        <FileVersion>1.1.2</FileVersion>
-        <PackageVersion>1.1.2</PackageVersion>
+        <PackageTags>UnitTest, LoadTest, StressTest, IntegrationTest, FunctionalTest, xUnit, Report, HTML, Chart</PackageTags>
+        <AssemblyVersion>1.2.0</AssemblyVersion>
+        <FileVersion>1.2.0</FileVersion>
+        <PackageVersion>1.2.0</PackageVersion>
     </PropertyGroup>
 
     <ItemGroup>
