--- a/src/MarkopTest.csproj
+++ b/src/MarkopTest.csproj
@@ -13,9 +13,9 @@
         <RepositoryUrl>https://github.com/MarkopDev/MarkopTest</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <PackageTags>UnitTest, LoadTest, StressTest, IntegrationTest, FunctionalTest, xUnit, Report, HTML, Chart</PackageTags>
-        <AssemblyVersion>1.3.2</AssemblyVersion>
-        <FileVersion>1.3.2</FileVersion>
-        <PackageVersion>1.3.2</PackageVersion>
+        <AssemblyVersion>1.3.3</AssemblyVersion>
+        <FileVersion>1.3.3</FileVersion>
+        <PackageVersion>1.3.3</PackageVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -50,6 +50,9 @@
         </None>
         <None Update="Template\scripts\responseStatus.js">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Template\scripts\memorySamples.js">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
     </ItemGroup>
 </Project>
