--- a/src/MarkopTest.csproj
+++ b/src/MarkopTest.csproj
@@ -9,13 +9,15 @@
         <Description>Merkop Test is a free, open source, focused testing tool for the ASP.NET Framework.</Description>
         <Copyright>Copyright © 2021</Copyright>
         <PackageProjectUrl>https://github.com/MarkopDev/MarkopTest</PackageProjectUrl>
-        <PackageLicenseUrl>https://raw.githubusercontent.com/MarkopDev/MarkopTest/master/LICENSE</PackageLicenseUrl>
+        <PackageLicenseUrl></PackageLicenseUrl>
         <RepositoryUrl>https://github.com/MarkopDev/MarkopTest</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <PackageTags>UnitTest, LoadTest, StressTest, IntegrationTest, FunctionalTest, xUnit, Report, HTML, Chart</PackageTags>
-        <AssemblyVersion>1.3.5</AssemblyVersion>
-        <FileVersion>1.3.5</FileVersion>
-        <PackageVersion>1.3.5</PackageVersion>
+        <AssemblyVersion>1.3.7</AssemblyVersion>
+        <FileVersion>1.3.7</FileVersion>
+        <PackageVersion>1.3.7</PackageVersion>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
     </PropertyGroup>
 
     <ItemGroup>
@@ -52,7 +54,19 @@
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
         <None Update="Template\scripts\memorySamples.js">
-          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Include="..\LICENSE">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+        <None Include="Template\">
+            <Pack>True</Pack>
+            <PackagePath>Template</PackagePath>
+        </None>
+        <Content Include="MarkopTest.targets">
+            <Pack>True</Pack>
+            <PackagePath>build/MarkopTest.targets</PackagePath>
+        </Content>
     </ItemGroup>
 </Project>
