--- a/src/MarkopTest.csproj
+++ b/src/MarkopTest.csproj
@@ -13,14 +13,15 @@
         <RepositoryUrl>https://github.com/MarkopDev/MarkopTest</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <PackageTags>UnitTest, LoadTest, StressTest, IntegrationTest, FunctionalTest, xUnit, Report, HTML, Chart</PackageTags>
-        <AssemblyVersion>1.3.7</AssemblyVersion>
-        <FileVersion>1.3.7</FileVersion>
-        <PackageVersion>1.3.7</PackageVersion>
+        <AssemblyVersion>1.3.8</AssemblyVersion>
+        <FileVersion>1.3.8</FileVersion>
+        <PackageVersion>1.3.8</PackageVersion>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Hardware.Info" Version="1.0.1.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
         <PackageReference Include="RazorLight" Version="2.0.0-rc.3" />
         <PackageReference Include="xunit" Version="2.4.1" />
