--- a/src/MarkopTest.csproj
+++ b/src/MarkopTest.csproj
@@ -13,9 +13,9 @@
         <RepositoryUrl>https://github.com/MarkopDev/MarkopTest</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <PackageTags>UnitTest, LoadTest, StressTest, IntegrationTest, FunctionalTest, xUnit, Report, HTML, Chart</PackageTags>
-        <AssemblyVersion>1.3.9</AssemblyVersion>
-        <FileVersion>1.3.9</FileVersion>
-        <PackageVersion>1.3.9</PackageVersion>
+        <AssemblyVersion>1.4.0</AssemblyVersion>
+        <FileVersion>1.4.0</FileVersion>
+        <PackageVersion>1.4.0</PackageVersion>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
     </PropertyGroup>
@@ -23,7 +23,6 @@
     <ItemGroup>
         <PackageReference Include="Hardware.Info" Version="1.0.1.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
-        <PackageReference Include="RazorLight" Version="2.0.0-rc.3" />
         <PackageReference Include="xunit" Version="2.4.1" />
     </ItemGroup>
 
@@ -57,6 +56,9 @@
         <None Update="Template\scripts\memorySamples.js">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="Template\scripts\setup.js">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
         <None Include="..\LICENSE">
             <Pack>True</Pack>
             <PackagePath></PackagePath>
@@ -69,5 +71,8 @@
             <Pack>True</Pack>
             <PackagePath>build/MarkopTest.targets</PackagePath>
         </Content>
+        <None Update="Template\Result.html">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 </Project>
