fix: target copy file issue chore: update version

--- a/src/MarkopTest.targets
+++ b/src/MarkopTest.targets
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 <ItemGroup>
-    <None Include="$(MSBuildThisFileDirectory)\..\Template\Result.cshtml">
-        <Link>Template\Result.cshtml</Link>
+    <None Include="$(MSBuildThisFileDirectory)\..\Template\Result.html">
+        <Link>Template\Result.html</Link>
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </None>
